--- a/src/components/CalculatorNumbers/CalculatorNumbers.css
+++ b/src/components/CalculatorNumbers/CalculatorNumbers.css
@@ -1,30 +1,32 @@
 .CalculatorNumbers {
-    width: 80px;
+    width: 84px;
     padding: 15px;
     box-sizing: border-box;
-    margin: 10px;
+    margin: 6px;
     border: 1px solid #eee;
-    font-weight: bold;
+    font-weight: 800;
     text-align: center;
     cursor: pointer;
     display: inline-block;
 }
 
-.CalculatorNumbers:hover {
-    background-color: #eee;
+@media (hover: hover) {
+  .CalculatorNumbers:hover  {
+  background-color: #eee;
+  }
 }
 
 .CalculatorNumbers:active {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 #zero {
     width: 180px;
     padding: 15px;
     box-sizing: border-box;
-    margin: 10px;
+    margin: 6px;
     border: 1px solid #eee;
-    font-weight: bold;
+    font-weight:800;
     text-align: center;
     cursor: pointer;
     display: inline-block;
